<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/custom_background"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tv_header_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold"
            android:padding="@dimen/dimen_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/sr_number"
            android:gravity="center"/>

    <TextView
            android:id="@+id/tv_header_destination"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/dimen_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
            android:id="@+id/tv_header_mins"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_3"
            android:gravity="center"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/duemins"/>

</LinearLayout>