<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forecast.ForecastActivity">

    <TextView
            android:id="@+id/tvluas_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/luas_green_line"
            android:gravity="center"
            android:textColor="@color/secondaryDarkColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginTop="@dimen/dimen_12"/>

    <TextView
            android:id="@+id/tvluas_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvluas_green"
            tools:text="@string/placeholder_station"
            android:textStyle="bold"
            android:textColor="@color/secondaryDarkColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginTop="@dimen/dimen_20"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/btn_refresh"/>

    <Button
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/refresh"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toTopOf="@id/tvluas_station"
            app:layout_constraintBottom_toBottomOf="@id/tvluas_station"
            app:layout_constraintStart_toEndOf="@+id/tvluas_station"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:id="@+id/tvluas_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvluas_station"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/placeholder_direction"
            android:textColor="@color/black"
            android:layout_margin="@dimen/dimen_18"/>

    <ImageView
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/desc_background"
            android:src="@drawable/luasart"
            android:alpha="0.3"
            app:layout_constraintTop_toBottomOf="@id/tvluas_direction"/>

    <FrameLayout
            android:id="@+id/fl_trams"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvluas_direction"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dimen_20">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trams"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/placeholder_error"
                android:gravity="center"
                android:layout_marginBottom="@dimen/dimen_30"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:layout_gravity="bottom"/>

        <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>